// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render components modal render 1`] = `
<Main
  bleState={false}
  deviceOnline={true}
  iconProp={
    Object {
      "color": "#333",
      "iconStyle": Object {
        "alignItems": "center",
        "borderRadius": 100,
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      },
      "size": 48,
    }
  }
  iconSpace={24}
  lampIcon=""
  lampModalProp={
    Object {
      "bgImage": 0,
      "bgStyle": Object {
        "height": 340,
        "justifyContent": "center",
        "width": 560,
      },
      "done": "done",
      "iconBoxStyle": Object {
        "position": "absolute",
        "right": 20,
      },
      "subTitle": "subTitle",
      "title": "title",
    }
  }
  modalStartPoint={512}
  onRingLampResult={[Function]}
  onSearchResult={[Function]}
  ringIcon=""
  ringModalProp={
    Object {
      "bgImage": 0,
      "bgStyle": Object {
        "height": 340,
        "justifyContent": "center",
        "width": 560,
      },
      "done": "done",
      "iconBoxStyle": Object {
        "position": "absolute",
        "right": 20,
      },
      "subTitle": "subTitle",
      "title": "title",
    }
  }
  searchIcon=""
  searchModalProp={
    Object {
      "bgChildStyle": Object {
        "height": 300,
        "marginTop": 80,
        "width": 560,
      },
      "bgImage": 0,
      "bgStyle": Object {
        "height": 340,
        "justifyContent": "center",
        "width": 560,
      },
      "done": "done",
      "iconBoxStyle": Object {
        "position": "absolute",
        "right": 20,
      },
      "subTitle": "subTitle",
      "title": "title",
    }
  }
  successIcon=""
  themeColor="red"
  timeout={10000}
>
  <View>
    <View>
      <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 24,
          }
        }
      >
        <AnimatedComponent
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "marginBottom": 24,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginBottom": 24,
                "opacity": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 24,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFF",
                      "borderRadius": 100,
                      "height": 100,
                      "justifyContent": "center",
                      "width": 100,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFF",
                        "borderRadius": 100,
                        "height": 100,
                        "justifyContent": "center",
                        "width": 100,
                      },
                    ]
                  }
                >
                  <Component
                    color="#333"
                    d=""
                    opacity={1}
                    size={48}
                  >
                    <IconFont
                      color="#333"
                      d=""
                      fill={null}
                      hFlip={false}
                      height={null}
                      name={null}
                      opacity={1}
                      size={48}
                      stroke={null}
                      strokeCap="round"
                      strokeDash={
                        Array [
                          0,
                          0,
                        ]
                      }
                      strokeJoin="round"
                      strokeWidth={1}
                      style={null}
                      vFlip={false}
                      viewBox="0 0 1024 1024"
                      width={null}
                    />
                  </Component>
                </View>
              </View>
            </View>
          </View>
        </AnimatedComponent>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 24,
          }
        }
      >
        <AnimatedComponent
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "marginBottom": 24,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginBottom": 24,
                "opacity": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 24,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFF",
                      "borderRadius": 100,
                      "height": 100,
                      "justifyContent": "center",
                      "width": 100,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFF",
                        "borderRadius": 100,
                        "height": 100,
                        "justifyContent": "center",
                        "width": 100,
                      },
                    ]
                  }
                >
                  <Component
                    color="#333"
                    d=""
                    opacity={1}
                    size={48}
                  >
                    <IconFont
                      color="#333"
                      d=""
                      fill={null}
                      hFlip={false}
                      height={null}
                      name={null}
                      opacity={1}
                      size={48}
                      stroke={null}
                      strokeCap="round"
                      strokeDash={
                        Array [
                          0,
                          0,
                        ]
                      }
                      strokeJoin="round"
                      strokeWidth={1}
                      style={null}
                      vFlip={false}
                      viewBox="0 0 1024 1024"
                      width={null}
                    />
                  </Component>
                </View>
              </View>
            </View>
          </View>
        </AnimatedComponent>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 24,
          }
        }
      >
        <AnimatedComponent
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "marginBottom": 24,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginBottom": 24,
                "opacity": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 24,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFF",
                      "borderRadius": 100,
                      "height": 100,
                      "justifyContent": "center",
                      "width": 100,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFF",
                        "borderRadius": 100,
                        "height": 100,
                        "justifyContent": "center",
                        "width": 100,
                      },
                    ]
                  }
                >
                  <Component
                    color="#333"
                    d=""
                    opacity={1}
                    size={48}
                  >
                    <IconFont
                      color="#333"
                      d=""
                      fill={null}
                      hFlip={false}
                      height={null}
                      name={null}
                      opacity={1}
                      size={48}
                      stroke={null}
                      strokeCap="round"
                      strokeDash={
                        Array [
                          0,
                          0,
                        ]
                      }
                      strokeJoin="round"
                      strokeWidth={1}
                      style={null}
                      vFlip={false}
                      viewBox="0 0 1024 1024"
                      width={null}
                    />
                  </Component>
                </View>
              </View>
            </View>
          </View>
        </AnimatedComponent>
      </TouchableOpacity>
      <Portal
        onMaskPress={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
        visible={false}
      />
      <Portal
        onMaskPress={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
        visible={false}
      />
      <Portal
        onMaskPress={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
        visible={false}
      />
    </View>
  </View>
</Main>
`;

exports[`render components no modal render 1`] = `
<Main
  bleState={false}
  deviceOnline={true}
  iconProp={
    Object {
      "color": "#333",
      "iconStyle": Object {
        "alignItems": "center",
        "borderRadius": 100,
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      },
      "size": 48,
    }
  }
  iconSpace={24}
  lampIcon=""
  modalStartPoint={512}
  onRingLampResult={[Function]}
  onSearchResult={[Function]}
  ringIcon=""
  searchIcon=""
  successIcon=""
  themeColor="red"
  timeout={10000}
>
  <View>
    <View>
      <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 24,
          }
        }
      >
        <AnimatedComponent
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "marginBottom": 24,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginBottom": 24,
                "opacity": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 24,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFF",
                      "borderRadius": 100,
                      "height": 100,
                      "justifyContent": "center",
                      "width": 100,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFF",
                        "borderRadius": 100,
                        "height": 100,
                        "justifyContent": "center",
                        "width": 100,
                      },
                    ]
                  }
                >
                  <Component
                    color="#333"
                    d=""
                    opacity={1}
                    size={48}
                  >
                    <IconFont
                      color="#333"
                      d=""
                      fill={null}
                      hFlip={false}
                      height={null}
                      name={null}
                      opacity={1}
                      size={48}
                      stroke={null}
                      strokeCap="round"
                      strokeDash={
                        Array [
                          0,
                          0,
                        ]
                      }
                      strokeJoin="round"
                      strokeWidth={1}
                      style={null}
                      vFlip={false}
                      viewBox="0 0 1024 1024"
                      width={null}
                    />
                  </Component>
                </View>
              </View>
            </View>
          </View>
        </AnimatedComponent>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 24,
          }
        }
      >
        <AnimatedComponent
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "marginBottom": 24,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginBottom": 24,
                "opacity": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 24,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFF",
                      "borderRadius": 100,
                      "height": 100,
                      "justifyContent": "center",
                      "width": 100,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFF",
                        "borderRadius": 100,
                        "height": 100,
                        "justifyContent": "center",
                        "width": 100,
                      },
                    ]
                  }
                >
                  <Component
                    color="#333"
                    d=""
                    opacity={1}
                    size={48}
                  >
                    <IconFont
                      color="#333"
                      d=""
                      fill={null}
                      hFlip={false}
                      height={null}
                      name={null}
                      opacity={1}
                      size={48}
                      stroke={null}
                      strokeCap="round"
                      strokeDash={
                        Array [
                          0,
                          0,
                        ]
                      }
                      strokeJoin="round"
                      strokeWidth={1}
                      style={null}
                      vFlip={false}
                      viewBox="0 0 1024 1024"
                      width={null}
                    />
                  </Component>
                </View>
              </View>
            </View>
          </View>
        </AnimatedComponent>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        disabled={false}
        onPress={[Function]}
        style={
          Object {
            "marginBottom": 24,
          }
        }
      >
        <AnimatedComponent
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "marginBottom": 24,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "marginBottom": 24,
                "opacity": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "marginBottom": 24,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFF",
                      "borderRadius": 100,
                      "height": 100,
                      "justifyContent": "center",
                      "width": 100,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFF",
                        "borderRadius": 100,
                        "height": 100,
                        "justifyContent": "center",
                        "width": 100,
                      },
                    ]
                  }
                >
                  <Component
                    color="#333"
                    d=""
                    opacity={1}
                    size={48}
                  >
                    <IconFont
                      color="#333"
                      d=""
                      fill={null}
                      hFlip={false}
                      height={null}
                      name={null}
                      opacity={1}
                      size={48}
                      stroke={null}
                      strokeCap="round"
                      strokeDash={
                        Array [
                          0,
                          0,
                        ]
                      }
                      strokeJoin="round"
                      strokeWidth={1}
                      style={null}
                      vFlip={false}
                      viewBox="0 0 1024 1024"
                      width={null}
                    />
                  </Component>
                </View>
              </View>
            </View>
          </View>
        </AnimatedComponent>
      </TouchableOpacity>
    </View>
  </View>
</Main>
`;
